Gene name problems are partially fixed.
git-svn-id: http://chianti.ucsd.edu/svn@29411 0ecc0d97-ab19-0410-9704-bfe1a75892f5